﻿- Restore memory text color changes based on usage


Version 0.6.1 -

- Add support for new radio stations (Paradise Radio and Shoreline Radio)


Version 0.6 -

- Compatibility updates for game version 1.15


Version 0.5 -

- Automatically create new LSMR settings file after reading legacy LSM settings (don't wait for user to open options panel)
- Update display name in content manager and options panel (LSM -> Loading Screen Mod)
- Add failed and missing asset count display on loading screen
- Add more curated images (thanks? to LeaderOfTheMonkeys)
- Update API to restore GetMateral and GetMesh overloads with isLod parameter